k8s-manifests/drkiq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: drkiq
  name: drkiq
spec:
  ports:
    - name: "8010"
      port: 8010
      targetPort: 8010
  selector:
    io.kompose.service: drkiq
status:
  loadBalancer: {}
