k8s-manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "8020"
      port: 8020
      targetPort: 8020
  selector:
    io.kompose.service: nginx
  type: NodePort
